--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,3 +14,7 @@
 @import "blocks/consultation";
 @import "blocks/form";
 @import "blocks/carousel";
+@import "blocks/catalog";
+@import "blocks/feed";
+@import "blocks/footer";
+@import "blocks/modal";
